css fixes
- drop down arrow padding and background to prevent overlap with text
- changed splash rendering to use percentages instead of margin: auto,
for it to work on older browsers
- removed IE drop down rendering with -ms-expand

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -59,6 +59,7 @@ html {
 
 body {
 	background-color: $default-color;
+	height: 100%;
 }
 
 h1 {
@@ -196,10 +197,16 @@ header {
 	     		&:hover {
 	     			cursor: pointer;
 	     		}
+
+	     		&::-ms-expand {
+	     			display: none;
+	     		}
 			}
 
 			.drop-arrow {
 				font-size: 0.5em;
+				padding: 1.2em 0;
+				background: $content-color-light;
 			}
 		}
 
@@ -251,8 +258,17 @@ header {
 
 // !MAIN
 
-main {
-	margin-bottom: 2em;
+#app {
+	height: 100%;
+
+	.wrapper {
+		height: 100%;
+
+		main {
+			margin-bottom: 2em;
+			height: 100%;
+		}
+	}
 }
 
 // !SPLASH
@@ -261,15 +277,14 @@ main {
 	display: flex;
 	justify-content: center;
 	position: relative;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	top: 42%;
 	color: $secondary-color;
 
 	.text-container {
-		margin: auto;
 		position: relative;
 		text-align: center;
-		width: 50%;
+		width: 100%;
 		padding: 1em;
 
 		h1 {
@@ -458,10 +473,7 @@ footer {
 	}
 
 	.splash {
-
-		.text-container {
-			width: 90%;
-		}
+		top: 140px;
 	}
 
 	.games-container {
